MVVM構成にリファクタリング